@@ -223,7 +223,7 @@ template<typename Tuple> inline stream_from &stream_from::operator>>(Tuple &t)
 template<typename Tuple, std::size_t index>
 inline void stream_from::extract_value(Tuple &t) const
 {
-  using field_type = std::remove_reference_t<decltype(std::get<index>(t))>;
+  using field_type = strip_t<decltype(std::get<index>(t))>;
   assert(index < m_fields.size());
   if constexpr (nullness<field_type>::always_null)
   {
