@@ -112,6 +112,11 @@ inline TO check_cast(FROM value, char const description[])
 }
 
 
+/// Remove any constness, volatile, and reference-ness from a type.
+template<typename TYPE>
+using strip_t = std::remove_cv_t<std::remove_reference_t<TYPE>>;
+
+
 /** Check library version at link time.
  *
  * Ensures a failure when linking an application against a radically
